# cuda-benoit

./: .gitignore  CMakeLists.txt  README.md  README.txt  format-all.sh
doc/: gen_formula.txt  index.rst
editor/: Makefile
editor/src/: Makefile  bailout_dlg.cpp  bailout_dlg.h  benoit.vcproj  calc.cpp  calc.h  cpu_info.cpp  cpuid.cpp  cpuid.h  main.cpp  mandelbrot_kernel.cu  mandelbrot_kernel.h  palette_ctrl.cpp  palette_ctrl.h  palette_ctrl.vcproj  pch.h  render_ctrl.cpp  render_ctrl.h  render_ctrl.vcproj  sse2_x64_mandelbrot.asm  sse2_x64_mandelbrot.h  utils.h
lib/: cutil.h  cutil_inline.h  cutil_inline_runtime.h  int_types.h  targetver.h  trace.cpp  trace.h
player/src/: Makefile  config.cpp  config.h  cuda_timers.cpp  cuda_timers.h  cuda_util.cpp  cuda_util.h  kernels.cu  kernels.cu_o  kernels.h  main.cpp  pch.h  platform.cpp  platform.h  player  player.cfg  player.vcproj  tracks.cpp  tracks.h
player/src/tracks/: track04.benoit  track06.benoit  track09.benoit  track11.benoit  track18.benoit  track19.benoit  track20.benoit
player/tracks/: track05.benoit  track13.benoit  track14.benoit  track15.benoit  track22.benoit
src/editor/: bailout_dlg.cpp  bailout_dlg.h  calc.cpp  cpuid.cpp  main.cpp  mandelbrot_kernel.cu  mandelbrot_kernel.h  palette_ctrl.cpp  pch.h  render_ctrl.cpp  sse2_x64_mandelbrot.asm  sse2_x64_mandelbrot.h
src/lib/: cuda_util.cpp  cuda_util.h  int_types.h  targetver.h  util.h
src/player/: config.h  cuda_timers.cpp  cuda_timers.h  kernels.cu  main.cpp  pch.h  platform.cpp  tracks.cpp  tracks.h
src/track/: pch.h  track.cpp  track.h
track/: pch.h  track.cpp  track.h  track.vcproj
